--- a/web/package.json
+++ b/web/package.json
@@ -21,9 +21,11 @@
         "formik": "^2.2.9",
         "framer-motion": "^7.3.6",
         "history": "^5.3.0",
+        "install": "^0.13.0",
         "lodash": "^4.17.21",
         "moment": "^2.29.4",
         "net": "^1.0.2",
+        "npm": "^11.1.0",
         "prismjs": "^1.29.0",
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
